# strands-agentic-search

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: 2026-06-01-strands-agentic-search-design.md
scripts/: extract_qpt_prompts.py
src/strands_agentic_search/: __init__.py  config.py  llm.py
src/strands_agentic_search/agents/: __init__.py  flow_agent.py
src/strands_agentic_search/agents/conversational/: __init__.py  agent.py  prompts.py
src/strands_agentic_search/app/: __init__.py  server.py
src/strands_agentic_search/tooling/: __init__.py  factory.py  mcp_client.py  substitutor.py
src/strands_agentic_search/tooling/query_planning/: __init__.py  model_invoker.py  output_parser.py  prompts.py  tool.py
src/strands_agentic_search/tooling/query_planning/prompt_assets/: default_search_template.txt  query_planning_system_prompt.txt  query_planning_user_prompt.txt  template_selection_system_prompt.txt  template_selection_user_prompt.txt
tests/: test_config_env.py  test_conversational.py  test_output_parser.py  test_prompt_fidelity.py  test_query_planning_tool.py  test_substitutor.py
